updating the rest of my details

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>I am a coding student and former sous chef looking to expand my future.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born and raised in Houston, Texas (howdy ya'll).</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I'm pretty basic: I love cooking, video games, and creating music.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would love to get a job in softwarer development!</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Seattle and am very much missing the sunshine.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Being a developer is something I've always wanted to do but never let myself take the risk to do so.</p>
     </section>
 
     <footer id="footer">
